--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li><a href="#about">About DCAF</a></li>
-          <li><a href="#features">Features</a></li>
-          <li><a href="#initiatives">Initiatives</a></li>
+          <li><a class="nav-link disabled" href="#features">Features</a></li>
+          <li><a class="nav-link disabled" href="#initiatives">Initiatives</a></li>
           <li><a href="#contact">Contact Us</a></li>
         </ul>
       </nav>
