Initial - business audience - responsiveness
Improved responsiveness

--- a/business.html
+++ b/business.html
@@ -174,17 +174,17 @@
                     <table class="table table-bordered">
                         <thead>
                             <tr class="d-flex text-white" style="background-color: #A29EC9 ; border-color: #7030A0;">
-                                <th class="col-2">Transformational Dimensions</th>
+                                <th class="col-2">Dimensions</th>
                                 <th class="col-5">Buyers</th>
                                 <th class="col-5">Suppliers</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr class="d-flex">
-                                <td class="col-sm-2">Enriched interactions</td>
-                                <td class="col-sm-10">
+                                <td class="col-2">Enriched interactions</td>
+                                <td class="col-10">
                                   <ul>
-                                    <li>Improved trading partner relationship, partners can spend more time
+                                    <li>Improved trading partner relationships, partners are able to spend more time
                                        on collaborative trade than paperwork
                                     </li>
                                     <li>Improved dispute handling</li>
@@ -194,8 +194,8 @@
                         </tbody>
                         <tbody>
                             <tr class="d-flex">
-                                <td class="col-sm-2">Optimised operating models</td>
-                                <td class="col-sm-5">
+                                <td class="col-2">Optimised operating models</td>
+                                <td class="col-5">
                                   <ul>
                                       <li>Increased accounts receivable productivity</li>
                                       <li>Fewer rejected invoices</li>
@@ -204,7 +204,7 @@
                                       <li>Enhanced accounts reconciliation</li>
                                   </ul>
                                 </td>
-                                <td class="col-sm-5">
+                                <td class="col-5">
                                     <ul>
                                         <li>Increased accounts payable productivity</li>
                                         <li>FIncreased accuracy/less data quality issues
@@ -221,8 +221,8 @@
                         </tbody>
                         <tbody>
                             <tr class="d-flex">
-                                <td class="col-sm-2">Enhanced decision support and insight</td>
-                                <td class="col-sm-10">
+                                <td class="col-2">Enhanced decision support and insight</td>
+                                <td class="col-10">
                                   <ul>
                                       <li>Higher quality data results in improved analytics, e.g. customer lifetime value and spend analysis</li>
                                       <li>Improved cash management</li>
