Initial - business audience, css updates

--- a/business.html
+++ b/business.html
@@ -165,7 +165,6 @@
         </div>
         <!-- end contianer for slider-->
         </div>
-
  </section> 
  
 <section class="digital-benefits" id="digital-benefits"> 
@@ -207,7 +206,7 @@
                                 <td class="col-5">
                                     <ul>
                                         <li>Increased accounts payable productivity</li>
-                                        <li>FIncreased accuracy/less data quality issues
+                                        <li>Increased accuracy/less data quality issues
                                           </li>
                                         <li>Reduced processing costs
                                           </li>
