Initial-business - adjust css for image

--- a/business.html
+++ b/business.html
@@ -101,7 +101,7 @@
       <div class="container">
         <div class="top_content">
               <div class="row">
-                  <div class="col">
+                  <div class="col-sm-6">
                     <div class="card fadeInLeft wow animated">
                         <div class="card-header text-white" style="background-color: #A29EC9 ; border-color: #7030A0;">
                             Electronic invoicing (eInvoicing) is a good first step!
@@ -111,20 +111,15 @@
                                <p class="card-text" >
                                  Invoicing is part of the accounts payable stage of the procure to pay lifecycle. eInvoicing is the exchange
                                   and processing of the invoice document between a supplier’s and a buyer’s systems in an integrated (structured)
-                                   electronic format. </p>
-                                 <p>
-                                   invoice data issued in emailed PDF, Word formats, scanned paper invoices and paper invoices sent via
-                                   fax machines are not considered as eInvoices. 
-                                   </p>
-                                   <p>
-                                     eInvoicing has now become more synonymous with maximising the automation of the accounts payable stage.
-                                   </p>           
+                                   electronic format. Invoice data issued in emailed PDF, Excel spreadsheets and word documents or scanned paper 
+                                   invoices are not considered as eInvoices. eInvoicing has now become more synonymous with maximising the automation
+                                    of the accounts payable stage.</p>        
                           </div> <!-- card-body-->
                       </div> <!-- card-->
                     </div> <!-- col-->
-                  <div class="col">
+                  <div class="col-sm-6">
                     <div class="card">
-                            <img class="card-img w-75 fadeInRight wow animated" src="img/p2p-lifecycle.png" alt="Card image">
+                            <img class="card-img w-75 fadeInRight wow animated img-fluid" src="img/p2p-lifecycle.png" alt="Card image">
                       </div>
                     </div> <!-- col-->  
                 </div> <!-- row-->
