--- a/business.html
+++ b/business.html
@@ -119,7 +119,7 @@
                     </div> <!-- col-->
                   <div class="col-sm-6">
                     <div class="card">
-                            <img class="card-img w-75 fadeInRight wow animated img-fluid" src="img/p2p-lifecycle.png" alt="Card image">
+                            <img class="card-img w-75  fadeInRight wow animated img-fluid" src="img/p2p-lifecycle.png" alt="Card image">
                       </div>
                     </div> <!-- col-->  
                 </div> <!-- row-->
@@ -175,7 +175,10 @@
                         </thead>
                         <tbody>
                             <tr class="d-flex">
-                                <td class="col-2">Enriched interactions</td>
+                                <td class="col-2"style="text-align: center;">
+                                    <i class="fa fa-handshake-o fa-3x text-center" style="color:#A29EC9" aria-hidden="true"></i>         
+                                    <p>Enriched interactions</p>
+                                    </td>
                                 <td class="col-10">
                                   <ul>
                                     <li>Improved trading partner relationships, partners are able to spend more time
@@ -188,7 +191,10 @@
                         </tbody>
                         <tbody>
                             <tr class="d-flex">
-                                <td class="col-2">Optimised operating models</td>
+                                <td class="col-2"style="text-align: center;">
+                                    <i class="fa fa-cogs fa-3x text-center" style="color:#A29EC9" aria-hidden="true"></i> 
+                                    <p>Optimised operating models</p>
+                                  </td>
                                 <td class="col-5">
                                   <ul>
                                       <li>Increased accounts receivable productivity</li>
@@ -215,7 +221,10 @@
                         </tbody>
                         <tbody>
                             <tr class="d-flex">
-                                <td class="col-2">Enhanced decision support and insight</td>
+                                <td class="col-2" style="text-align: center;">
+                                  <i class="fa fa-lightbulb-o fa-3x text-center" style="color:#A29EC9" aria-hidden="true"></i> 
+                                  <p>Enhanced decision support and insight</p>
+                                  </td>
                                 <td class="col-10">
                                   <ul>
                                       <li>Higher quality data results in improved analytics, e.g. customer lifetime value and spend analysis</li>
