Initial - index updates

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
         <p class="tagline">
           Pioneering digital governance - a contemporary approach to verifying compliance and adoption of digital standards
         </p>
-        <a class="btn btn-full" href="business.html">Get Started for business</a>
-        <a class="btn btn-full" href="contact.html">Get Started for technologists</a>
+        <a class="btn btn-full" href="business.html">Get started for business</a>
+        <a class="btn btn-full" href="contact.html">Get started for technologists</a>
       </div>
     </div>
 
