Update on why dcaf

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
       <div class="container text-left text-white">
         
             <h3>
-                How does DCAF meet business needs?
+                How does DCAFOnline meet business needs?
               </h3>
   
             <p>
@@ -260,7 +260,7 @@
 
   <section class="about" id="about">
     <div class="container text-left">
-      <h3>Why DCAFOnline</h3>
+      <h2>Why DCAFOnline?</h2>
       <p>There is little doubt that standards or interoperability frameworks are fundamental to enabling digital interoperability.
          Ensuring they are used in a prescribed way, through governance or other mechanisms , is more important. Governance is the
            glue that makes interoperability work. Given the diverse range of digital standards in use, there is inevitably
@@ -282,13 +282,12 @@
             <p>These gaps, if left unaddressed, can be expected to significantly inhibit market adoption. There needs to be a simple and
            cost-effective way for businesses to determine or evaluate whether their providers support an organised collection of
             standards (or frameworks) and for service providers to voluntarily and transparently publish their 'accreditation'
-             status as a set of digital capability assertions.
+             status as a set of digital capability assertions. DCAFOnline is based on a Digital Capability Assertion Framework (DCAF). The approach uses
+              transparency as a governance and compliance tool to help facilitate and enable self-regulation of a digitally interoperable ecosystem.
+              Transparency, used in the DCAF prescribed manner, will hold participants to the highest level of service and business conduct. 
             </p>
-             <p>The DCAF approach uses transparency as a governance and compliance tool to help facilitate and enable
-                self-regulation of a digitally interoperable ecosystem. Transparency will hold participants to the highest level of service
-                 and business conduct. 
-            </p>
-             <p>DCAF is also a a good foundation on which to   add specific requirements to cater for particular regulatory regimes.</p>
+             <p>DCAF has been designed to provide foundational capabilities in support of interoperability frameworks intended for many vertical
+                industries - extensibility by design.</p>
 
 
     </div>
@@ -296,14 +295,14 @@
   <!-- /About -->
   <!-- Parallax -->
 
-  <div class="block bg-primary block-pd-lg block-bg-overlay text-center" data-bg-img="img/parallax-bg.jpg" data-settings='{"stellar-background-ratio": 0.6}' data-toggle="parallax-bg">
+  <div class="block bg-primary  block-bg-overlay" data-bg-img="img/parallax-bg.jpg" data-settings='{"stellar-background-ratio": 0.6}' data-toggle="parallax-bg">
     <!-- particles.js container -->
     <div class="container text-left">
       <h2>
-        How does DCAF work
+        How does DCAFOnline work?
       </h2>
     </p>
-     <p>DCAF is undergoing a preparation for a limited, closed Beta testing. Further details will be published here once the beta testing is complete.
+     <p>DCAFOnline is undergoing a preparation for a limited, closed Beta testing. Further details will be published here once the beta testing is complete.
       Please contact us should you wish to participate in the beta testing.
     </p>
     <div id="particles-js"></div>
@@ -319,7 +318,7 @@
       <div class="row">
         <div class="col-md-12 text-center">
           <h2 class="section-title">Contact Us</h2>
-          <p> Email: </p><span class="obfuscate">moc.enilnofacd@ofni</span>
+          <p> Email: <span class="obfuscate">moc.enilnofacd@ofni</span> </p>
         </div>
         
       </div>
