Updates to supported businesses

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   <section class="business-need" id="business-need">
   <div class="container text-left"> <!--business case for digital-->
       <h2> The Business Need </h2>          
-      <h3>The businesses need to participate in the digital economy</h3>
+      <h3>Participation in the digital economy</h3>
       <p>Digital transformation or more aptly called business transformation, has become an imperative for all businesses (small, medium and large).
          It's not just about embracing new technologies, it is more a change in thinking and organisational culture - to usher in
           a positive change and to optimise business operations/activities, lower cost and improve time to market. One such area is in 
@@ -232,11 +232,12 @@
               </h3>
   
             <p>
-              A business will use a business management or accounting systems to generate, exchange and process digital documents such as invoices. 
-              When systems exchange information digitally it is important that they all speak the same technical language, this includes:
+              Business management or accounting systems have recently become very popular and cost effective to generate, exchange and process
+               digital documents such as invoices. When systems exchange information digitally it is important that they all speak the same
+                technical language. This includes:
             </p>
              <ul>
-               <li> knowing the digital address of the trading partner's system</li>
+               <li> being able to discover the digital address of the trading partner's system</li>
                <li> structuring and transmitting the document in a way it can be recieved and understood without errors</li>
              </ul>
              <p>The common language these systems speak, making them digitally interoperable, are based on technology standards. 
