--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <ul class="nav-menu">
           <li><a href="#business-need">Business Need</a></li>
           <li><a href="#about">Why DCAFOnline</a></li>
-          <li><a class="nav-link disabled" href="#initiatives">Initiatives</a></li>
+         <!-- <li><a class="nav-link disabled" href="#initiatives">Initiatives</a></li> -->
           <li><a href="#contact">Contact Us</a></li>
         </ul>
       </nav>
