Initial - taglione and logo update

--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
           </h1>
 
         <p class="tagline">
-          Pioneering digital governance - a contemporary approach to verifying compliance and adoption of digital standards
+          Helping buisinesses embrace the digital economy - a contemporary approach for business' to know what digital standards
+           and frameworks their service providers support
         </p>
         <a class="btn btn-full" href="#business-need">Get Started</a>
       </div>
