--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           </h1>
 
         <p class="tagline">
-          Helping buisinesses embrace the digital economy - a contemporary approach for business' to know what digital standards
+          Helping buisinesses embrace the digital economy - a contemporary approach for businesses to know what digital standards
            and frameworks their service providers support
         </p>
         <a class="btn btn-full" href="#business-need">Get Started</a>
