Initial - additional tagline review

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
           </h1>
 
         <p class="tagline">
-          Helping buisinesses embrace the digital economy - a contemporary approach for businesses to know what digital standards
-           and frameworks their service providers support
+          Helping buisinesses embrace the digital economy - a contemporary approach to businesses having visibilitiy
+           of the digital standards and frameworks their service providers support
         </p>
         <a class="btn btn-full" href="#business-need">Get Started</a>
       </div>
