--- a/index.html
+++ b/index.html
@@ -88,10 +88,15 @@
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-          <li><a href="#business-need">Business Need</a></li>
-          <li><a href="#about">Why DCAFOnline</a></li>
+          <li><a href="index.html#business-need">Business Need</a></li>
+          <li><a href="index.html#about">Why DCAFOnline</a></li>
          <!-- <li><a class="nav-link disabled" href="#initiatives">Initiatives</a></li> -->
-          <li><a href="#contact">Contact Us</a></li>
+         <li class="menu-has-children"><a href="#">DCAFOnline Initiatives</a>
+          <ul>
+            <li><a href="digital-procurement.html#">Digital Procurement</a></li>
+          </ul>
+        </li>
+          <li><a href="index.html#contact">Contact Us</a></li>
         </ul>
       </nav>
       <!-- #nav-menu-container -->
@@ -106,7 +111,7 @@
   <!-- Business Need-->
   <section class="business-need" id="business-need">
   <div class="container text-left"> <!--business case for digital-->
-      <h2> The Business Need </h2>          
+      <h2>The Business Need </h2>          
       <h3>Participation in the digital economy</h3>
       <p>Digital transformation or more aptly called business transformation, has become an imperative for all businesses (small, medium and large).
          It's not just about embracing new technologies, it is more a change in thinking and organisational culture - to usher in
@@ -286,8 +291,8 @@
       </ul>
             <p>These gaps, if left unaddressed, can be expected to significantly inhibit market adoption. There needs to be a simple and
            cost-effective way for businesses to determine or evaluate whether their providers support an organised collection of
-            standards (or frameworks) and for service providers to voluntarily and transparently publish their 'accreditation'
-             status as a set of digital capability assertions. DCAFOnline is based on a Digital Capability Assertion Framework (DCAF). The approach uses
+            standards (or frameworks) and for service providers to voluntarily and transparently publish their credentials
+             as a set of digital capability assertions. DCAFOnline is based on a Digital Capability Assertion Framework (DCAF). The approach uses
               transparency as a governance and compliance tool to help facilitate and enable self-regulation of a digitally interoperable ecosystem.
               Transparency, used in the DCAF prescribed manner, will hold participants to the highest level of service and business conduct. 
             </p>
