Initial digital procurement many gifs for animation

--- a/digital-procurement.html
+++ b/digital-procurement.html
@@ -130,7 +130,82 @@
                 </div> <!-- col-->
               <div class="col-sm-10">
                 <div class="card">
-                   <img class="card-img fadeInUp wow animated img-fluid" src="img/how-does-4-corner-work-iq2.gif" alt="Card image">
+                    <div class="top_cont_inner">
+                        <div class="container text-left">
+                                <!-- Slider -->
+                                <div id="main-slider" class="main-slider flexslider">
+                                  <ul class="slides">
+                                    <li>
+                                      <img src="img/4-corner-explained-1.gif" alt="" />
+                                      <div class="flex-caption">
+                                        <h6></h6>
+                                      </div>
+                                    </li>
+                                    <li>
+                                      <img src="img/4-corner-explained-2.gif" alt="" />
+                                      <div class="flex-caption">
+                                        <h6></h6>
+                                      </div>
+                                    </li>
+                                    <li>
+                                        <img src="img/4-corner-explained-3.gif" alt="" />
+                                        <div class="flex-caption">
+                                          <h6></h6>
+                                        </div>
+                                      </li>
+                                      <li>
+                                          <img src="img/4-corner-explained-4.gif" alt="" />
+                                          <div class="flex-caption">
+                                            <h6></h6>
+                                          </div>
+                                        </li>
+                                        <li>
+                                            <img src="img/4-corner-explained-5.gif" alt="" />
+                                            <div class="flex-caption">
+                                              <h6></h6>
+                                            </div>
+                                          </li>
+                                          <li>
+                                              <img src="img/4-corner-explained-6.gif" alt="" />
+                                              <div class="flex-caption">
+                                                <h6></h6>
+                                              </div>
+                                            </li>
+                                            <li>
+                                                <img src="img/4-corner-explained-7.gif" alt="" />
+                                                <div class="flex-caption">
+                                                  <h6></h6>
+                                                </div>
+                                              </li>
+                                              <li>
+                                                  <img src="img/4-corner-explained-8.gif" alt="" />
+                                                  <div class="flex-caption">
+                                                    <h6></h6>
+                                                  </div>
+                                                </li>
+                                                <li>
+                                                    <img src="img/4-corner-explained-9.gif" alt="" />
+                                                    <div class="flex-caption">
+                                                      <h6></h6>
+                                                    </div>
+                                                  </li>
+                                                  <li>
+                                                      <img src="img/4-corner-explained-10.gif" alt="" />
+                                                      <div class="flex-caption">
+                                                        <h6></h6>
+                                                      </div>
+                                                    </li>
+                                                    <li>
+                                                        <img src="img/4-corner-explained-11.gif" alt="" />
+                                                        <div class="flex-caption">
+                                                          <h6></h6>
+                                                        </div>
+                                                      </li>
+                                  </ul>
+                                </div>
+                                <!-- end slider -->
+                          </div>
+                          <!-- end contianer for slider-->
                 </div>
               </div> <!-- col-->  
             </div> <!-- row-->
