--- a/digital-procurement.html
+++ b/digital-procurement.html
@@ -63,9 +63,14 @@
           <li><a href="index.html#business-need">Business Need</a></li>
           <li><a href="index.html#about">Why DCAFOnline</a></li>
          <!-- <li><a class="nav-link disabled" href="#initiatives">Initiatives</a></li> -->
-         <li class="menu-has-children"><a href="#">DCAFOnline Initiatives</a>
+         <li class="menu-has-children"><a href="digital-procurement.html#">DCAFOnline Initiatives</a>
           <ul>
-            <li><a href="digital-procurement.html#">Digital Procurement</a></li>
+            <li class ="menu-has-children"> <a href="digital-procurement.html#">Digital Procurement</a>
+            <ul>
+                <li><a href="#background">Background</a></li>
+                <li><a href="procurement-resources.html">Resources</a></li>
+                <Li><a href="procurement-providers.html">Recognised Providers</a></li>
+           </ul>  
           </ul>
         </li>
           <li><a href="index.html#contact">Contact Us</a></li>
@@ -74,7 +79,7 @@
       <!-- #nav-menu-container -->
 
       <nav class="nav social-nav pull-right d-none d-lg-inline">
-        <a href="#"><i class="fa fa-twitter"></i></a> <a href="#"><i class="fa fa-facebook"></i></a> <a href="#"><i class="fa fa-linkedin"></i></a> <a href="#contact"><i class="fa fa-envelope"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a> <a href="#"><i class="fa fa-facebook"></i></a> <a href="#"><i class="fa fa-linkedin"></i></a> <a href="index.html#contact"><i class="fa fa-envelope"></i></a>
       </nav>
     </div>
   </header>
@@ -148,59 +153,58 @@
                                       </div>
                                     </li>
                                     <li>
-                                        <img src="img/4-corner-explained-3.gif" alt="" />
+                                    <img src="img/4-corner-explained-3.gif" alt="" />
+                                    <div class="flex-caption">
+                                      <h6></h6>
+                                    </div>
+                                  </li>
+                                  <li>
+                                     <img src="img/4-corner-explained-4.gif" alt="" />
+                                       <div class="flex-caption">
+                                        <h6></h6>
+                                      </div                                        </li>
+                                    <li>
+                                      <img src="img/4-corner-explained-5.gif" alt="" />
+                                      <div class="flex-caption">
+                                        <h6></h6>
+                                      </div>
+                                    </li>
+                                    <li>
+                                     <img src="img/4-corner-explained-6.gif" alt="" />
+                                      <div class="flex-caption">
+                                        <h6></h6>
+                                        </div>
+                                    </li>
+                                      <li>
+                                        <img src="img/4-corner-explained-7.gif" alt="" />
                                         <div class="flex-caption">
                                           <h6></h6>
                                         </div>
-                                      </li>
-                                      <li>
-                                          <img src="img/4-corner-explained-4.gif" alt="" />
+                                     </li>
+                                       <li>
+                                          <img src="img/4-corner-explained-8.gif" alt="" />
                                           <div class="flex-caption">
                                             <h6></h6>
-                                          </div>
-                                        </li>
-                                        <li>
-                                            <img src="img/4-corner-explained-5.gif" alt="" />
+                                           </div>
+                                       </li>
+                                         <li>
+                                            <img src="img/4-corner-explained-9.gif" alt="" />
                                             <div class="flex-caption">
-                                              <h6></h6>
+                                            <h6></h6>
+                                           </div>
+                                         </li>
+                                          <li>
+                                            <img src="img/4-corner-explained-10.gif" alt="" />
+                                            <div class="flex-caption">
+                                             <h6></h6>
                                             </div>
                                           </li>
                                           <li>
-                                              <img src="img/4-corner-explained-6.gif" alt="" />
-                                              <div class="flex-caption">
-                                                <h6></h6>
-                                              </div>
-                                            </li>
-                                            <li>
-                                                <img src="img/4-corner-explained-7.gif" alt="" />
-                                                <div class="flex-caption">
-                                                  <h6></h6>
-                                                </div>
-                                              </li>
-                                              <li>
-                                                  <img src="img/4-corner-explained-8.gif" alt="" />
-                                                  <div class="flex-caption">
-                                                    <h6></h6>
-                                                  </div>
-                                                </li>
-                                                <li>
-                                                    <img src="img/4-corner-explained-9.gif" alt="" />
-                                                    <div class="flex-caption">
-                                                      <h6></h6>
-                                                    </div>
-                                                  </li>
-                                                  <li>
-                                                      <img src="img/4-corner-explained-10.gif" alt="" />
-                                                      <div class="flex-caption">
-                                                        <h6></h6>
-                                                      </div>
-                                                    </li>
-                                                    <li>
-                                                        <img src="img/4-corner-explained-11.gif" alt="" />
-                                                        <div class="flex-caption">
-                                                          <h6></h6>
-                                                        </div>
-                                                      </li>
+                                            <img src="img/4-corner-explained-11.gif" alt="" />
+                                            <div class="flex-caption">
+                                            <h6></h6>
+                                             </div>
+                                         </li>
                                   </ul>
                                 </div>
                                 <!-- end slider -->
@@ -209,10 +213,29 @@
                 </div>
               </div> <!-- col-->  
             </div> <!-- row-->
+            
        </div> <!-- container-->
     
   </section>
 
+<!-- Business Need-->
+<section class="grey-bk" id="offerings">
+    <div class="container text-left text white"> <!--business case for digital-->       
+        <h3>Our procurement coverage</h3>
+        <p>We will initially support eInvoicing. During the latter half of this year we will begin work to support other
+            activities and stages within the procurement lifecycle, including payments, remittances, purchase orders, supply chain 
+            financing etc. 
+        </p>
+            <br>
+         <p>
+            In the longer term we will focus on other supply chains such as logistics, trade facilitation and reporting - not necessarily in that order.
+        </p>
+        <br>
+        <a class="btn btn-full" href="procurement-providers.html">Recognised Providers</a>
+        <a class="btn btn-full" href="procurement-resources.html">Resources</a>
+          </div> <!-- container-->
+  
+      </section>
 
   <a class="scrolltop" href="#"><span class="fa fa-angle-up"></span></a>
 
