--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
           Helping buisinesses embrace the digital economy - a contemporary approach to businesses having visibilitiy
            of the digital standards and frameworks their service providers support
         </p>
-        <a class="btn btn-full" href="#business-need">Get Started</a>
+        <a class="btn btn-full" href="#business-need">More about DCAFOnline</a>
+        <a class="btn btn-full" href="digital-procurement.html#">Jump straight to our initiatives</a>
       </div>
     </div>
 
@@ -87,22 +88,27 @@
       </div>
 
       <nav id="nav-menu-container">
-        <ul class="nav-menu">
-          <li><a href="index.html#business-need">Business Need</a></li>
-          <li><a href="index.html#about">Why DCAFOnline</a></li>
-         <!-- <li><a class="nav-link disabled" href="#initiatives">Initiatives</a></li> -->
-         <li class="menu-has-children"><a href="#">DCAFOnline Initiatives</a>
-          <ul>
-            <li><a href="digital-procurement.html#">Digital Procurement</a></li>
+          <ul class="nav-menu">
+            <li><a href="index.html#business-need">Business Need</a></li>
+            <li><a href="index.html#about">Why DCAFOnline</a></li>
+           <!-- <li><a class="nav-link disabled" href="#initiatives">Initiatives</a></li> -->
+           <li class="menu-has-children"><a href="digital-procurement.html#">DCAFOnline Initiatives</a>
+            <ul>
+              <li class ="menu-has-children"> <a href="digital-procurement.html#">Digital Procurement</a>
+              <ul>
+                  <li><a href="#background">Background</a></li>
+                  <li><a href="procurement-resources.html">Resources</a></li>
+                  <Li><a href="procurement-providers.html">Recognised Providers</a></li>
+             </ul>  
+            </ul>
+          </li>
+            <li><a href="index.html#contact">Contact Us</a></li>
           </ul>
-        </li>
-          <li><a href="index.html#contact">Contact Us</a></li>
-        </ul>
-      </nav>
+        </nav>
       <!-- #nav-menu-container -->
 
       <nav class="nav social-nav pull-right d-none d-lg-inline">
-        <a href="#"><i class="fa fa-twitter"></i></a> <a href="#"><i class="fa fa-facebook"></i></a> <a href="#"><i class="fa fa-linkedin"></i></a> <a href="#contact"><i class="fa fa-envelope"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a> <a href="#"><i class="fa fa-facebook"></i></a> <a href="#"><i class="fa fa-linkedin"></i></a> <a href="index.html#contact"><i class="fa fa-envelope"></i></a>
       </nav>
     </div>
   </header>
@@ -268,7 +274,7 @@
     </section>
     <!-- /Call to Action -->
 
-  <section class="grey-bk" id="about">
+  <section class="lightcyan-bk" id="about">
     <div class="container text-left text-white">
       <h2>Why DCAFOnline?</h2>
       <p>There is little doubt that standards or interoperability frameworks are fundamental to enabling digital interoperability.
