Initial - minus day 1 onboarding  plus resourcing

--- a/digital-procurement.html
+++ b/digital-procurement.html
@@ -67,7 +67,7 @@
           <ul>
             <li class ="menu-has-children"> <a href="digital-procurement.html#">Digital Procurement</a>
             <ul>
-                <li><a href="#background">Background</a></li>
+                <li><a href="digital-procurement.html#background">Background</a></li>
                 <li><a href="procurement-resources.html">Resources</a></li>
                 <Li><a href="procurement-providers.html">Recognised Providers</a></li>
            </ul>  
