Initial procurement - parallax bg update

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
   <!-- @component: footer -->
 
   <section id="contact">
-  <div style="background-image:url('img/parallax-bg0.png');">
+  <div style="background-image:url('img/parallax-bg.jpg');">
     <div class="container text-white">
       <div class="row">
         <div class="col-md-12 text-center">
