Initial - Link4 update

--- a/digital-procurement.html
+++ b/digital-procurement.html
@@ -63,9 +63,9 @@
           <li><a href="index.html#business-need">Business Need</a></li>
           <li><a href="index.html#about">Why DCAFOnline</a></li>
          <!-- <li><a class="nav-link disabled" href="#initiatives">Initiatives</a></li> -->
-         <li class="menu-has-children"><a href="digital-procurement.html#">DCAFOnline Initiatives</a>
+         <li class="menu-has-children"><a href="digital-procurement.html">DCAFOnline Initiatives</a>
           <ul>
-            <li class ="menu-has-children"> <a href="digital-procurement.html#">Digital Procurement</a>
+            <li class ="menu-has-children"> <a href="digital-procurement.html">Digital Procurement</a>
             <ul>
                 <li><a href="digital-procurement.html#background">Background</a></li>
                 <li><a href="procurement-resources.html">Resources</a></li>
@@ -85,9 +85,9 @@
   </header>
   <!-- #header -->
 
-  <!-- Business Need-->
-  <section class="business-need" id="background">
-  <div class="container text-left"> <!--business case for digital-->
+  <!-- background-->
+  <section class="team" id="background">
+  <div class="container text-left"> 
       <h2>Digital Procurement</h2>          
       <h3>Background</h3>
       <p>An overall vision to increase the proportion of businesses participating in the digital economy should ideally begin
@@ -95,29 +95,22 @@
           multiple parties and a variety of paper based or electronic forms dealing with the production, distribution, data capture,
            matching, reconciliation, dispute management and subsequent archiving of documents, errors, manual intervention and
             processing delays. It is common to every business in some form, shape or the other.</p>  
-      <br>
-      <p>Digital procurement solutions that are compatible with a framework of open standards can be expected to facilitate procurement
-         across an expanded trading partner network. This can also increase the competitiveness of the goods and services market to
-          subsequently realise more cost savings that can be redirected to vital or higher value services. Digitalising procurement
-           is also a key step to ensuring integrity, competition and transparency in the business of public sector procurement.</p> 
        <br>
        <p>In 2016 the Australian Taxation office facilitated and enabled a multi-stakeholder forum, the Digital Business Council,
           which endorsed an Interoperability Framework of open standards to pave the way for a whole-of-economy approach to
            eInvoicing. The Interoperability Framework is designed to address the fragmentation in the procurement ecosystem - every
             trading network generally uses a unique combination of standards which limits an SME’s ability to exchange documents 
             with multiple networks.  The Framework also provides certainty on how a prescribed set of established open standards
-             can be used to extend digital procurement to all businesses. It should also minimise the cost of implementation
-              for software providers and enhance business interactions, especially for the SME market.</p>
+             can be used to extend digital procurement to all businesses.</p>
         </div> <!-- container-->
 
     </section>
 
   <!-- Approach -->
 
-
-  <section class="business-need" id="approach">
+  <section class="base-bk" id="approach">
       <div class="container text-left"> <!--business case for digital-->      
-          <h3>Approach</h3>
+          <h3>Our approach</h3>
           <p>The DCAFOnline Procurement Initiative promotes the use of the Interoperability Framework to create an ecosystem of
              digital Access Points, all able to interoperate (easily exchange information) with one another. The philosophy behind
               the framework “commoditising business-to-business (B2B) integration using open standards that are royalty free, are
@@ -231,7 +224,7 @@
             In the longer term we will focus on other supply chains such as logistics, trade facilitation and reporting - not necessarily in that order.
         </p>
         <br>
-        <a class="btn btn-full" href="procurement-providers.html">Recognised Providers</a>
+        <a class="btn btn-full" href="procurement-providers.html">Credentialed Providers</a>
         <a class="btn btn-full" href="procurement-resources.html">Resources</a>
           </div> <!-- container-->
   
