--- a/procurement-providers.html
+++ b/procurement-providers.html
@@ -89,11 +89,34 @@
 <!-- Business Need-->
 <section class="team" id="providers">
     <div class="container text-left text white"> <!--business case for digital-->   
-       <h2>Recognised providers</h2>        
-        <p>Watch this space on 30th May 2018
-        </p>
+       <h2>DCAF Credentialed Service Providers</h2>        
+       
+        <table class="table table-bordered">
+                    <thead>
+                        <tr class="d-flex " style="border-color:grey;">
+                            <th class="col-4">Provider</th>
+                            <th class="col-4">Service/s</th>
+                            <th class="col-4">Credential Level (click the level for details)</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr class="d-flex">
+                            <td class="col-4"style="text-align: center;">        
+                                <a href="https://link4.co/au/"><img src="img/LINK4_Logo_Blue_RGB.png" width="120" alt="" title=""></a>
+                                </td>
+                            <td class="col-4">
+                              <br>
+                                <p>
+                                  Access Point</p>
+                            </td>
+                            <td class="col-4">
+                              <br>
+                                <a href = "link4.html">DCAF Digital Procurement Level 1 </a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>   
 
-              <div id="particles-js"></div> 
               
           </div> <!-- container-->
   
