--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
            of the digital standards and frameworks their service providers support
         </p>
         <a class="btn btn-full" href="#business-need">More about DCAFOnline</a>
-        <a class="btn btn-full" href="digital-procurement.html#">Jump straight to our initiatives</a>
+        <a class="btn btn-full" href="digital-procurement.html">Our initiatives</a>
+        <a class="btn btn-full" href="procurement-providers.html">Credentialed Providers</a>
+        
       </div>
     </div>
 
@@ -115,7 +117,7 @@
   <!-- #header -->
 
   <!-- Business Need-->
-  <section class="business-need" id="business-need">
+  <section class="base-bk" id="business-need">
   <div class="container text-left"> <!--business case for digital-->
       <h2>The Business Need </h2>          
       <h3>Participation in the digital economy</h3>
@@ -164,7 +166,7 @@
     </section>
   <!-- About -->
 
-  <section class="digital-benefits" id="digital-benefits"> 
+  <section class="base-bk" id="digital-benefits"> 
     <div class="container  text-left" > <!--eInvoicing as first step-->
             <h3>The overall benefits of moving to digital span multiple dimensions</h3>
                     <table class="table table-bordered">
@@ -240,7 +242,7 @@
     </div>
   </section>
 
-  <section class="meeting-needs" id="meeting-needs"> 
+  <section class="base-bk" id="meeting-needs"> 
       <div class="container text-left" >
             <h3>
                 How does DCAFOnline meet business needs?
