Initial - Australian tag

--- a/digital-procurement.html
+++ b/digital-procurement.html
@@ -65,7 +65,7 @@
          <!-- <li><a class="nav-link disabled" href="#initiatives">Initiatives</a></li> -->
          <li class="menu-has-children"><a href="digital-procurement.html">DCAFOnline Initiatives</a>
           <ul>
-            <li class ="menu-has-children"> <a href="digital-procurement.html">Digital Procurement</a>
+            <li class ="menu-has-children"> <a href="digital-procurement.html">Australian Digital Procurement</a>
             <ul>
                 <li><a href="digital-procurement.html#background">Background</a></li>
                 <li><a href="procurement-resources.html">Resources</a></li>
@@ -88,7 +88,7 @@
   <!-- background-->
   <section class="team" id="background">
   <div class="container text-left"> 
-      <h2>Digital Procurement</h2>          
+      <h2>Australian Digital Procurement</h2>          
       <h3>Background</h3>
       <p>An overall vision to increase the proportion of businesses participating in the digital economy should ideally begin
          with processes that are common to every business, including Public Sector. The procurement supply chain usually involves
