--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
            <!-- <li><a class="nav-link disabled" href="#initiatives">Initiatives</a></li> -->
            <li class="menu-has-children"><a href="digital-procurement.html#">DCAFOnline Initiatives</a>
             <ul>
-              <li class ="menu-has-children"> <a href="digital-procurement.html#">Digital Procurement</a>
+              <li class ="menu-has-children"> <a href="digital-procurement.html#">Australian Digital Procurement</a>
               <ul>
                   <li><a href="digital-procurement.html#background">Background</a></li>
                   <li><a href="procurement-resources.html">Resources</a></li>
