Initial procurement - updated providers table

--- a/procurement-providers.html
+++ b/procurement-providers.html
@@ -93,10 +93,10 @@
        
         <table class="table table-bordered">
                     <thead>
-                        <tr class="d-flex " style="border-color:grey;">
+                        <tr class="d-flex " style="border-color:grey; background-color:#199EB8; color:white"">
                             <th class="col-4">Provider</th>
                             <th class="col-4">Service/s</th>
-                            <th class="col-4">Credential Level (click the level for details)</th>
+                            <th class="col-4">DCAF Credential Level <br> (click the level for details)</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -111,7 +111,7 @@
                             </td>
                             <td class="col-4">
                               <br>
-                                <a href = "link4.html">DCAF Digital Procurement Level 1 </a>
+                                <a href = "link4.html">AU Digital Procurement Level 1 </a>
                             </td>
                         </tr>
                     </tbody>
