Initial - link4 scaled logo

--- a/procurement-providers.html
+++ b/procurement-providers.html
@@ -93,7 +93,7 @@
        
         <table class="table table-bordered">
                     <thead>
-                        <tr class="d-flex " style="border-color:grey; background-color:#199EB8; color:white"">
+                        <tr class="d-flex " style="border-color:grey; background-color:#199EB8; color:white">
                             <th class="col-4">Provider</th>
                             <th class="col-4">Service/s</th>
                             <th class="col-4">DCAF Credential Level <br> (click the level for details)</th>
@@ -102,7 +102,7 @@
                     <tbody>
                         <tr class="d-flex">
                             <td class="col-4"style="text-align: center;">        
-                                <a href="https://link4.co/au/"><img src="img/LINK4_Logo_Blue_RGB.png" width="120" alt="" title=""></a>
+                                <a href="https://link4.co/au/"><img src="img/LINK4_Logo_Blue_RGB_scaled.png" width="120" alt="" title=""></a>
                                 </td>
                             <td class="col-4">
                               <br>
