Spelling errors on main page

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           </h1>
 
         <p class="tagline">
-          Helping buisinesses embrace the digital economy - a contemporary approach to businesses having visibilitiy
+          Helping businesses embrace the digital economy - a contemporary approach to businesses having visibility
            of the digital standards and frameworks their service providers support
         </p>
         <a class="btn btn-full" href="#business-need">More about DCAFOnline</a>
