Initial - index proofread

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     </div> <!-- col-->  
                 </div> <!-- row-->
                 <br>
-                  <p>Large enterprises usually operate accross the full continuum of the procure to pay lifecycle. The vast majority
+                  <p>Large enterprises usually operate across the full continuum of the procure to pay lifecycle. The vast majority
                     of businesses (small businesses) usually focus more on the accounts receivable and accounts payable stages. Every business
                      has trading partners (buyer/s and supplier/s). Businesses exchange procurement information (documents) in some form or the other
                       with their trading partners. The most common activities between trading partners are invoicing,
@@ -255,7 +255,7 @@
             </p>
              <ul>
                <li> being able to discover the digital address of the trading partner's system</li>
-               <li> structuring and transmitting the document in a way it can be recieved and understood without errors</li>
+               <li> structuring and transmitting the document in a way it can be received and understood without errors</li>
              </ul>
              <p>The common language these systems speak, making them digitally interoperable, are based on technology standards. 
              In many cases these standards are packaged with sets of policies and guidelines as an Interoperability Framework. Such frameworks 
@@ -280,7 +280,7 @@
     <div class="container text-left text-white">
       <h2>Why DCAFOnline?</h2>
       <p>There is little doubt that standards or interoperability frameworks are fundamental to enabling digital interoperability.
-         Ensuring they are used in a prescribed way, through governance or other mechanisms , is more important. Governance is the
+         Ensuring they are used in a prescribed way, through governance or other mechanisms, is more important. Governance is the
            glue that makes interoperability work. Given the diverse range of digital standards in use, there is inevitably
            going to be gaps in assessing digital service providers' adherence to an interoperability framework or organised
             collection of standards. Some of these gaps include:</p>
