Initial launch - indicium update

--- a/procurement-providers.html
+++ b/procurement-providers.html
@@ -126,6 +126,20 @@
                                 <a href = "link4.html">AU Digital Procurement Level 1 </a>
                             </td>
                         </tr>
+                        <tr class="d-flex">
+                          <td class="col-4"style="text-align: center;">        
+                              <a href="http://www.indiciumsolutions.com.mx/"><img src="img/indicium-scaled.jpg" width="120" alt="" title=""></a>
+                              </td>
+                          <td class="col-4">
+                            <br>
+                              <p>
+                                Access Point</p>
+                          </td>
+                          <td class="col-4">
+                            <br>
+                              <a href = "indicium.html">AU Digital Procurement Level 1 </a>
+                          </td>
+                      </tr>
                     </tbody>
                 </table>   
 
