Initial launch - indicium mailto fix

--- a/indicium.html
+++ b/indicium.html
@@ -189,7 +189,7 @@
                                 <p> Costs and charges </p>                                   
                                 </td>
                             <td class="col-8">
-                                <p>Please contact Indicium Solutions at <a href="mailto:eJosel.ortiz@indiciumsolutions.com.mx?subject=Australian eInvoicing costs and charges">Josel.ortiz@indiciumsolutions.com.mx</a> for further information.</p>
+                                <p>Please contact Indicium Solutions at <a href="mailto:Josel.ortiz@indiciumsolutions.com.mx?subject=Australian eInvoicing costs and charges">Josel.ortiz@indiciumsolutions.com.mx</a> for further information.</p>
                             </td>
                         </tr>
                         <tr class="d-flex">
