Initial launch - link4 page logo update

--- a/link4.html
+++ b/link4.html
@@ -100,7 +100,7 @@
 <!-- Business Need-->
 <section class="team" id="providers">
     <div class="container text-left text white"> <!--business case for digital--> 
-      <a href="https://link4.co/au/"><img src="img/LINK4_Logo_Blue_RGB.png" width="240" alt="" title=""></a>
+      <a href="https://link4.co/au/"><img src="img/LINK4_Logo_tag_line_Blue_RGB_scaled.png" width="240" alt="" title=""></a>
       <br>
       <br>
        <h2>Access point criteria and service information</h2>  
