Initial launch - indium abbreviated logo

--- a/procurement-providers.html
+++ b/procurement-providers.html
@@ -128,7 +128,7 @@
                         </tr>
                         <tr class="d-flex">
                           <td class="col-4"style="text-align: center;">        
-                              <a href="http://www.indiciumsolutions.com.mx/"><img src="img/indicium-scaled.jpg" width="120" alt="" title=""></a>
+                              <a href="http://www.indiciumsolutions.com.mx/"><img src="img/Indicium-Logo-abbreviated-scaled.jpg" width="120" alt="" title=""></a>
                               </td>
                           <td class="col-4">
                             <br>
