Initial launch - B2BE inclusion

--- a/procurement-providers.html
+++ b/procurement-providers.html
@@ -128,7 +128,7 @@
                         </tr>
                         <tr class="d-flex">
                           <td class="col-4"style="text-align: center;">        
-                              <a href="http://www.indiciumsolutions.com.mx/"><img src="img/Indicium-Logo-abbreviated-scaled.jpg" width="120" alt="" title=""></a>
+                              <a href="http://www.indiciumsolutions.com.mx/"><img src="img/Indicium-Logo-abbreviated-scaled.jpg" width="90" alt="" title=""></a>
                               </td>
                           <td class="col-4">
                             <br>
@@ -140,6 +140,20 @@
                               <a href = "indicium.html">AU Digital Procurement Level 1 </a>
                           </td>
                       </tr>
+                      <tr class="d-flex">
+                        <td class="col-4"style="text-align: center;">        
+                            <a href="https://www.b2be.com/"><img src="img/B2BE-logo-left-blue.png" width="200" alt="" title=""></a>
+                            </td>
+                        <td class="col-4">
+                          <br>
+                            <p>
+                              Access Point</p>
+                        </td>
+                        <td class="col-4">
+                          <br>
+                            <a href = "B2BE.html">AU Digital Procurement Level 1 </a>
+                        </td>
+                    </tr>
                     </tbody>
                 </table>   
 
